implemented overrideMimeType() extension

BUG: 142265

svn path=/trunk/KDE/kdelibs/; revision=656602